--- a/style/style.css
+++ b/style/style.css
@@ -82,7 +82,7 @@ li a:hover {
 
 #main h2 {
   font-size: 20px;
-  color: rgba(0, 0, 0, 0.2);
+  color: rgba(0, 0, 0, 0.3);
   font-family: Arial, Helvetica, sans-serif, Times, serif, serif;
 }
 
@@ -92,13 +92,29 @@ li a:hover {
   font-size: 20px;
   font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
   margin-right: 20px;
+  text-align: justify;
 }
+
 /* Final tag main */
 
-#aspas{
-  width: 100px;
-  height: 100px;
+.line {
+  background: #df5400;
+  border: 1px;
+  height: 2px;
+}
+
+#aspas  {
+  width: 70px;
+  height: 70px;
   object-fit: cover;
+}
+
+#ct {
+  margin-top: 10px;
+  font-size: 20px;
+  color: rgba(0, 0, 0, 0.5);
+  font-family: Arial, Helvetica, sans-serif, Times, serif, serif;
+  text-align: justify;
 }
 
 .cite {
@@ -110,13 +126,17 @@ li a:hover {
   font-size: 20px;
   padding-left: 50px;
   padding-right: 50px;
+  text-align: justify;
 }
+
 
 #para2{
   font-size: 20px;
   padding-left: 50px;
   padding-right: 50px;
+  text-align: justify;
 }
+
 
 /* Inicio div das imagens */
 #img {
@@ -141,7 +161,6 @@ li a:hover {
   height: 200px;
   display: inline-flex;
   object-fit: cover;
-  padding-bottom: 600px;
 }
 /* Final da imagem fotos */
 
